2005-07-01  Ben Elliston  <bje@gnu.org>

	Unify some changes with the 1.4 branch:

	2004-10-28  Nick Clifton  <nickc@redhat.com>
	* baseboards/iq2000-sim.exp: New file.

	2004-06-08  Alexandre Oliva  <aoliva@redhat.com>
	* baseboards/mn10300-sim.exp: Set needs_status_wrapper and
	noresults to zero.

	2004-05-13  Kazuhiro Inaoka  <inaoka.kazuhiro@renesas.com>
	* baseboards/m32r-linux-sim.exp: Add New file.

2005-06-24  Ben Elliston  <bje@gnu.org>

	* MAINTAINERS: Update my email address.

2005-06-24  Ben Elliston  <bje@gnu.org>

	* Update the FSF's physical address throughout.

2005-06-22  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to most recent version.
	* config.sub: Likewise.

2005-04-28  Mark Kettenis  <kettenis@gnu.org>

	* lib/target.exp (prune_warnings): Add a few more linker
	warning patterns for OpenBSD.

2005-03-20  Mark Kettenis  <kettenis@gnu.org>

	* lib/target.exp (prune_warnings): Add linker warning patterns for
	OpenBSD.

2005-01-29  Hans-Peter Nilsson  <hp@axis.com>

	* baseboards/cris-sim.exp: New file.

2004-11-19  Nick Clifton  <nickc@redhat.com>

	* lib/libgloss.exp (newlib_include_flags): Document why -isystem
	is used instead of -I.
	(libio_include_flags): Use -I instead of -isystem and
	document why.
	(g++_include_flags): Use -I instead of -isystem.
	(libstdc++_include_flags): Likewise. 

2004-11-04  Ben Elliston  <bje@gnu.org>

	* lib/dg.exp (dg-test): If a `dg-do run' test fails to compile,
	mark the test as unresolved, rather than warning.

2004-10-27  Nick Clifton  <nickc@redhat.com>

	* baseboards/iq2000-sim.exp: New file.

2004-08-20  Daniel Jacobowitz  <dan@debian.org>

	* testglue.c: Prototype abort(3) and exit(3).

2004-08-14  Paul Brook  <paul@codesourcery.com>

	* config/sim.exp (sim_download, sim_upload): New procs.

2004-06-30  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to current revision.
	* config.sub: Likewise.

2004-06-12  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to current revision.